--- a/PorteFolio/package.json
+++ b/PorteFolio/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "three": "^0.149.0",
     "three-obj-loader": "^1.1.3",
-    "web-ifc-three": "^0.0.125"
+    "web-ifc": "^0.0.42",
+    "web-ifc-three": "^0.0.125",
+    "web-ifc-viewer": "^1.0.218"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
